--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-# Store your API keys here
-# Be sure to add/uncomment .env in .gitignore
-
 // .env 
+
+REACT_APP_API_KEY= LJ311mkQXU6uuAsHUjOGBfQPusgt64686hQrfQIMPd
